<resources>
    <string name="app_name">Desafio1</string>
    <string name="login">LOG IN</string>
    <string name="users">Users</string>
    <string name="singin">SIGN IN</string>
    <string name="password">Password</string>
    <string name="contents">Contents</string>
    <string name="equation">Quadratic equation</string>
    <string name="votes">Votes</string>
    <string name="deduction">wage deduction</string>
    <string name="value_a">Enter the value of A</string>
    <string name="value_b">Enter the value of B</string>
    <string name="value_c">Enter the value of C</string>
    <string name="calculate">CALCULATE</string>
<string name="result">RESULT</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="clean">CLEAN</string>
    <string name="title_votes">CANDIDATES</string>
    <string name="candidate1">Jesus Alvarenga</string>
    <string name="candidate2">Johana Benitez</string>
<string name="candidate3">Carmen Melara</string>
    <string name="candidate4">Elmer Olivares</string>
    <string name="instruccion_candidates">ENTER VOTES</string>
    <string name="identifier1">IDENTIFIER: 1</string>
    <string name="identifier2">IDENTIFIER: 2</string>
    <string name="identifier3">IDENTIFIER: 3</string>
    <string name="identifier4">IDENTIFIER: 4</string>
    <string name="send">SEND</string>
    <string name="total_votes">Total votes</string>
    <string name="example">1,1,2,2,etc... cada voto debera ir separado por una coma(,)</string>
<string name="nama">Name:</string>
    <string name="bono_salary">Bono + Salario: </string>
<string name="last_name">Last Name:</string>
    <string name="hours">work hours:</string>
    <string name="dates">Dates</string>
    <string name="workstation">Workstation: </string>
    <string name="salary">Salary</string>
    <string name="worker1">Worker 1</string>
<string name="worker2">Worker 2</string>
    <string name="worker3">Woker 3</string>
    <string name="add">ADD</string>
    <string name="process">PROCESS</string>
    <string name="note">NOTE: For different workstations, the following order will be used: Manager, Assistant, Secretary</string>
</resources>