<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".EquationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/container_elevation"
                android:elevation="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_baseline_calculate_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:text="@string/equation"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:text="@string/value_a"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/value_A"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/container_elevation_edittext"
                        android:elevation="20dp"
                        android:gravity="center"
                        android:hint="@string/a"
                        android:textColor="@color/dark_purple"
                        android:textColorHint="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:text="@string/value_b"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/value_B"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/container_elevation_edittext"
                        android:elevation="20dp"
                        android:gravity="center"
                        android:hint="@string/b"
                        android:textColor="@color/dark_purple"
                        android:textColorHint="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:text="@string/value_c"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/value_C"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/container_elevation_edittext"
                        android:elevation="20dp"
                        android:gravity="center"
                        android:hint="@string/c"
                        android:textColor="@color/dark_purple"
                        android:textColorHint="@color/gray" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnclean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="55dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/container_button"
                    android:text="@string/clean" />

                <Button
                    android:id="@+id/btncalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="55dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/container_button_clean"
                    android:text="@string/calculate" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/container_elevation"
                android:elevation="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/result"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtresult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>