<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_priamry"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/container_elevation1"
        android:elevation="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/singin"
            android:textColor="@color/dark_purple"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="165dp"
            android:layout_height="112dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <EditText
            android:id="@+id/users"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/container_elevation_edittext"
            android:hint="@string/users"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/container_elevation_edittext"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwordrepit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/container_elevation_edittext"
            android:hint="@string/users"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/container_button"
            android:text="@string/login"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_Registrer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/container_button"
            android:text="@string/singin"
            android:textSize="20dp" />


    </LinearLayout>

</LinearLayout>