<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".VotesActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_father"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/container_elevation"
                android:elevation="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/instruccion_candidates"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/etxvotes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/container_elevation_edittext"
                    android:elevation="20dp"
                    android:gravity="center"
                    android:hint="@string/votes"
                    android:maxLength="27"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/example"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/btnsend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/container_button"
                    android:text="@string/send"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:textColor="@color/dark_purple"
                    android:textSize="15dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/title_votes"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/container_elevation"
                android:elevation="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:elevation="20dp"
                        android:src="@drawable/candidate_1" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/candidate1"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/identifier1"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/resultC1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/final1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_candidate2"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/container_elevation"
                android:elevation="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:elevation="20dp"
                        android:src="@drawable/candidate_2" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/candidate2"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/identifier2"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/resultC2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/final2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_candidate3"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/container_elevation"
                android:elevation="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="100dp"

                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:elevation="20dp"
                        android:src="@drawable/candidate_3" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/candidate3"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/identifier3"
                        android:textColor="@color/black"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/resultC3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/final3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black"
                        android:textSize="15dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_candidate4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/container_elevation"
                android:elevation="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:elevation="20dp"
                        android:src="@drawable/candidate_4" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/candidate4"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/identifier4"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/resultC4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/final4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>